fix width overflow

--- a/style.css
+++ b/style.css
@@ -39,10 +39,9 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   gap: 5px;
- 
 }
 .book-display {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   display: flex;
   flex-direction: row;
@@ -58,20 +57,18 @@ h1 {
   border-radius: 10px;
   padding: 5px;
 }
-div .btn-div{
+div .btn-div {
   border: none;
   display: flex;
   flex-direction: column;
   gap: 10px;
-
 }
-div .book-text{
+div .book-text {
   border: none;
   display: flex;
   flex-direction: row;
   gap: 2px;
 }
-
 
 .footer {
   padding: 10px;
